css/style.css
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}

article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}

ol, ul {
	list-style: none;
}

blockquote, q {
	quotes: none;
}

blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}

table {
	border-collapse: collapse;
	border-spacing: 0;
}

html {
    scroll-behavior: smooth;
}

html, body {
    overflow-x: hidden;
}

body {
    font-family: 'Inter';
    position: relative;
}

* {
    box-sizing: border-box;
}

a {
    color: inherit;
    text-decoration: none;
}

h1 {
    font-size: 70px;
    font-weight: 600;
    margin-bottom: 40px;
    /* color: #141E38; */
}

.def-title {
    font-size: 36px;
    font-weight: 600;
    margin-bottom: 30px;
    color: #141E38;
}

.def-descr {
    color: #141E38;
    margin-bottom: 30px;
    line-height: 1.3;
}

.def-btn {
    background-color: #E0B100;
    color: #fff;
    padding: 12px 40px;
    border-radius: 24px;
    display: inline-block;
    font-weight: 600;
    transition: background-color 0.5s ease;
}

.def-btn:hover {
    background-color: #C9A10A;
}

.content {
    padding: 0 120px;
    max-width: 1600px;
    margin: 0 auto;
}

.select-custom {
    position: relative;
    color: #444;
    border-radius: 0;
}

.select-custom > select {
    background: transparent;
    border: 0;
    appearance: none;
    z-index: 1;
    -webkit-appearance: none;
    -moz-appearance: none;
}

.select-custom > select::-ms-expand{
    display: none;
}

.select-custom select {
    font-family: 'Inter';
    /* appearance: none;
    background: none; */
    border: none;
    color: #F5F5F5;
    outline: none;
    font-size: 16px;
}

.header-nr.select-custom {
    width: 100px;
}

.header-nr.select-custom select {
    width: 100%;
}

.select-arrow {
    position: absolute;
    z-index: -1;
    border: 8px solid transparent;
    border-bottom: 0;
    right: 11px;
}

.select-arrow {
    display: none;
}

.select-arrow.is-visible {
    display: block;
    top: 6px;
    border-top-color: #fff;
}

.select-custom select option {
    color: #000;
}

/* Header START */
.header {
    color: #F5F5F5;
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    z-index: 11;
}

.header-row {
    display: flex;
    align-items: center;
    padding: 16px 0;
}

.header-phone {
    margin-right: 40px;
}

.header-phone:hover {
    color: #E0B100;
}

.header-phone:active {
    color: #C99F00;
}

.header-email:hover {
    color: #E0B100;
}

.header-email:active {
    color: #C99F00;
}

.header-right {
    margin-left: auto;
    display: flex;
    align-items: center;
}

.header-social {
    margin-right: 20px;
    padding-right: 40px;
    border-right: 1px solid #F5F5F5;
    min-height: 25px;
}

.header-social a {
    display: inline-block;
}

.header-social a img:hover {
    filter: drop-shadow(0 0 10px #E0B100);
}

.header-social a img:active {
    color: #C99F00;
}

.header-social a:nth-last-child(n+2) {
    margin-right: 10px;
}

.header-btn-wrap {
    display: flex;
    align-items: center;
    margin-right: 40px;
    padding-right: 18px;
    border-right: 1px solid #F5F5F5;
}

.header-btn {
    min-height: 25px;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 6px 20px;
    border-radius: 40px;
    border: 1px solid transparent;
}

.header-btn:first-child {
    margin-right: 10px;
}

.header-btn:hover {
    border: 1px solid #E0B100;
    min-height: 32px;
}

.header-btn:active {
    background-color: #C99F00;
}


.header-bottom {
    padding: 24px 0;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.header-nav ul {
    display: flex;
}

.header-nav ul li {
    display: inline-block;
    font-size: 18px;
    font-weight: 600;
}

.header-nav ul li:nth-last-child(n+2) {
    margin-right: 45px;
}

.header-nav ul li a:hover {
    color: #E0B100;
}

.header-nav ul li a:active {
    color: #C99F00;
}


.logo img {
    max-width: 177px;
}

.hamburger {
    display: none;
    cursor: pointer;
}

.hamburger img {
    max-width: 40px;
}

.header-mobile {
    display: none;
    position: fixed;
    top: 0;
    right: 0;
    background-color: #1E1E1E;
    padding: 60px 25px;
    height: 100%;
    text-align: center;
    transition: transform 0.35s ease;
}

.header-mobile .header-right {
    display: block;
}

.header-mobile .header-social,
.header-mobile .header-btn-wrap {
    border: none;
}

.header-mobile .header-left {
    margin-bottom: 25px;
    text-align: center;
}

.header-mobile .header-left a {
    display: block;
}

.header-mobile .header-phone {
    margin-right: 0;
    margin-bottom: 10px;
}

.header-mobile .header-btn-wrap {
    display: block;
    margin-right: 0;
    padding-right: 0;
}

.header-mobile .header-btn:first-child {
    margin-right: 0;
}

.header-mobile .header-btn-wrap a {
    margin-bottom: 20px;
}

.header-mobile .header-social {
    margin-right: 0;
    padding-right: 0;
    margin-bottom: 15px;
}

.header-mobile-close {
    position: absolute;
    right: 25px;
    top: 20px;
    cursor: pointer;
}

.header-mobile-close img {
    max-width: 20px;
    opacity: 0.7;
}
/* Header END */

/* Banner START */
.banner-wrapper {
    background-size: cover;
    background-position: top center;
    background-repeat: no-repeat;
    padding-top: calc(156px + 80px);
    padding-bottom: 80px;
    color: #fff;
}
/* ... */

